--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </section>
     <section id="about">
-      <!-- <p class="section__text__p1">Get To Know More</p> -->
+      <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
@@ -129,7 +129,7 @@
       />
     </section>
     <section id="experience">
-      <!-- <p class="section__text__p1">Explore My</p> -->
+      <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -225,7 +225,7 @@
       />
     </section>
     <section id="projects">
-      <!-- <p class="section__text__p1">Browse My Recent</p> -->
+      <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
