--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="/assets/Profile-pic.jpg" alt="DHARUN A profile picture" />
+        <img src="/assets/profile-pic.png" alt="DHARUN A profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">DHARUN A</h1>
-        <p class="section__text__p2">Pursuing B-Tech</p>
+        <p class="section__text__p2">Pursuing B-Tech Degree <br> At <br> RTC, Coimbatore</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -77,16 +77,17 @@
         </div>
       </div>
     </section>
+    <hr >
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="😊"
+          <!-- <img
+            src="/assets/experience-pic.jpeg"
             alt="Profile picture"
             class="about-pic"
-          />
+          /> -->
         </div>
         <div class="about-details-container">
           <div class="about-containers">
@@ -232,73 +233,73 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="/assets/project-1.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">WeatherApp</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/DHARUN033/WeathersApp.git'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="/assets/project-2.jpg"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Quzify</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/DHARUN033/Quizify.git'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="assets/project-3.webp"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Marriage Hall Booking System</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/DHARUN033/MarriageHallBookingPage.git'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
