--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
+  <!-- Navigation -->
     <nav id="desktop-nav">
       <div class="logo">DHARUN A</div>
       <div>
@@ -16,10 +17,12 @@
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#certificate">Cretificates</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
+    <!-- Hamburger Navigation for Mobile -->
     <nav id="hamburger-nav">
       <div class="logo">DHARUN A</div>
       <div class="hamburger-menu">
@@ -32,10 +35,12 @@
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#certificate" onclick="toggleMenu()">Certificates</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
+    <!-- Landing Page -->
     <section id="profile">
       <div class="section__pic-container">
         <img src="/assets/profile-pic.png" alt="DHARUN A profile picture" />
@@ -78,16 +83,13 @@
       </div>
     </section>
     <hr >
+    <!-- About -->
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <!-- <img
-            src="/assets/experience-pic.jpeg"
-            alt="Profile picture"
-            class="about-pic"
-          /> -->
+
         </div>
         <div class="about-details-container">
           <div class="about-containers">
@@ -122,14 +124,10 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
+<!-- Experience -->
     </section>
     <section id="experience">
+      <hr>
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
@@ -218,14 +216,10 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
+    <!-- Project -->
     </section>
     <section id="projects">
+      <hr>
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
@@ -246,12 +240,6 @@
               >
                 Github
               </button>
-              <!-- <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
@@ -270,12 +258,6 @@
               >
                 Github
               </button>
-              <!-- <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
@@ -293,24 +275,134 @@
                 onclick="location.href='https://github.com/DHARUN033/MarriageHallBookingPage.git'"
               >
                 Github
-              </button>
-              <!-- <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button> -->
+            </button>
             </div>
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+      <hr>
     </section>
+    <!-- Certificate -->
+    </section>
+    <section id="certificate">
+      <hr>
+      <p class="section__text__p1">My</p>
+      <h1 class="title">Certificates</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/Coursera-logo.png"
+                alt="Certificate-1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Meta AR Developer</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.location.href='😊'"
+              >
+                View
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/gfg-logo.png"
+                alt="Certificate-2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title" style="margin-top: 100px;">JavaScript Basics to Advance</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='😊'"
+              >
+                View
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="/assets/Coursera-logo.png"
+                alt="Certificate-3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Introduction to Cybersecurity Tools & Cyberattacks</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='😊'"
+              >
+                View
+            </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="/assets/Coursera-logo.png"
+                alt="Certificate-3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Introduction of Neural Network</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='😊'"
+              >
+                View
+            </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="/assets/Coursera-logo.png"
+                alt="Certificate-3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Using AR Foundation in Unity</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='😊'"
+              >
+                View
+            </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/DataCamp-logo.webp"
+                alt="Certificate-3"
+                class="project-img"
+              style="margin-top: 50px;"/>
+            </div>
+            <h2 class="experience-sub-title project-title" style="margin-top: 100px;">Introduction of SQL</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/DHARUN033/MarriageHallBookingPage.git'"
+              >
+                View
+            </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </section>
+    <!-- Content -->
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
@@ -325,6 +417,7 @@
         </div>
       </div>
     </section>
+    <!-- Footer -->
     <script src="script.js"></script>
   </body>
 </html>
