--- a/index.html
+++ b/index.html
@@ -88,20 +88,9 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
-
-        </div>
         <div class="about-details-container">
           <div class="about-containers">
-            <div class="details-container">
-              <img
-                src="./assets/experience.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
-            </div>
+        
             <div class="details-container">
               <img
                 src="./assets/education.png"
@@ -111,15 +100,32 @@
               <h3>Education</h3>
               <p>Artificial Intelligence <br /> Bachelors Degree</p>
             </div>
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Internship</h3>
+              <p><b>Role:</b>Manual Tester <br>Meark Enterprice private Limited.</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="/assets/location loho.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Address</h3>
+              <p>+91 63743 72649 <br> Palapatti <br> Karur-639105</p>
+            </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              To leverage my analytical skills and experience to contribute
+ effectively to the growth and success of the organization, while
+ also engaging in initiatives that advance data-driven decision
+making and support continuous professional development in the
+ field of data analytics.
             </p>
           </div>
         </div>
