Contect details amd address was added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ making and support continuous professional development in the
     </section>
     <section id="experience">
       <hr>
+      <br>
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
@@ -419,7 +420,17 @@ making and support continuous professional development in the
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:dharun3344@gmail.com">dharun3344@gmail.com</a></p>
+          <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dharun3344@gmail.com">Email: Mail Me If You Need Any Help!!!</a>
+</p>
+        </div>
+      </div>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/contact-Scanner.jpg"
+            alt="Phone-Number"
+            class="icon contact-icon email-icon"
+          style="width: 100px;height: 100px;"/>
         </div>
       </div>
     </section>
