Logo Animation was Added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link href="https://fonts.cdnfonts.com/css/azonix" rel="stylesheet">
   </head>
   <body>
   <!-- Navigation -->
@@ -287,7 +288,7 @@ making and support continuous professional development in the
           </div>
         </div>
       </div>
-      <hr>
+      <!-- <hr> -->
     </section>
     <!-- Certificate -->
     </section>
@@ -411,19 +412,22 @@ making and support continuous professional development in the
     </section>
     <!-- Content -->
     <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
+      <!-- <p class="section__text__p1">Get in Touch</p> -->
       <h1 class="title">Contact Me</h1>
+      <br>
+      <p class="section__text__p1 " style="font-size:25px;">E-MAIL</p>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
+
           <img
             src="./assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dharun3344@gmail.com">Email: Mail Me If You Need Any Help!!!</a>
-</p>
+          <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dharun3344@gmail.com">Mail Me If You Need Any Help!!!</a></p>
         </div>
       </div>
+      <p class="section__text__p1"style="font-size:25px;">Phone-Number</p>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
