--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/in/dharun-a-2475b5290'"
+            onclick="location.href='https://linkedin.com/in/dharun-a-2475b5290'"target="_blank"
           />
           <img
             src="./assets/github.png"
@@ -162,7 +162,7 @@ making and support continuous professional development in the
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Intermediate</p>
+                  <p>Basics</p>
                 </div>
               </article>
               <article>
